# codex-desktop-linux

./: CHANGELOG.md  README.md  flake.nix
.github/workflows/: build.yml  cachix.yml  ci.yml
computer-use-linux/: Cargo.toml
computer-use-linux/gnome-shell-extension/: extension.js  metadata.json
computer-use-linux/src/: action_verification.rs  atspi_tree.rs  capture_transform.rs  chrome_runtime.rs  diagnostics.rs  lib.rs  main.rs  ocr.rs  screenshot.rs  server.rs
computer-use-linux/src/windowing/: mod.rs  registry.rs
computer-use-linux/src/windowing/backends/: gnome.rs  mod.rs  xdotool.rs
docs/: linux-computer-use.md  nix.md  troubleshooting.md
launcher/: start.sh.template
linux-features/conversation-mode/: patch.js  test.js
linux-features/copilot-reasoning-effort/: patch.js
linux-features/open-target-discovery/: patch.js  test.js
linux-features/remote-control-ui/: README.md  feature.json  patch.js  test.js
linux-features/remote-mobile-control/: patch.js  test.js
nix/: home-manager-module.nix  linux-features-test.nix  linux-features.nix  nixos-module.nix  package-selection.nix
packaging/linux/: PKGBUILD.template  codex-desktop.spec  control
plugins/openai-bundled/plugins/computer-use/: hooks.json
record-replay-linux/src/: recorder.rs  skysight.rs
scripts/: patch-linux-window-ui.js  patch-linux-window-ui.test.js
scripts/ci/: container-entrypoint.sh
scripts/lib/: bundled-plugins.sh  dmg.sh  linux-features.js  patch-chrome-plugin.js
scripts/patches/: avatar-overlay.js  keybinds-settings.js  main-process.js  registry.js  shared.js  webview-assets.js
scripts/patches/main-process/: misc.js
tests/: scripts_smoke.sh  webview_probe_equivalence.sh
updater/: Cargo.toml
updater/src/: app.rs  codex_cli.rs  config.rs  test_util.rs
(+6 files in other folders)
