[package]
name = "codex-computer-use-linux"
version = "0.3.1-linux-alpha1"
edition = "2021"

[[bin]]
name = "codex-computer-use-linux"
path = "src/main.rs"

[[bin]]
name = "codex-chrome-extension-host"
path = "src/bin/codex-chrome-extension-host.rs"

[[bin]]
name = "codex-computer-use-cosmic"
path = "src/bin/codex-computer-use-cosmic.rs"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
anyhow = "1.0.102"
# atspi without its "connection" feature: that feature pulls atspi-connection
# with default features, which include "p2p" — and p2p peer enumeration during
# connect() calls GetInterfaces on every a11y-bus peer, so a single
# AppArmor-confined peer (e.g. snap-packaged Slack) aborts the whole
# AccessibilityConnection. We deliberately never use P2P routing (upstream
# computer-use-linux issue #31), so depend on atspi-connection directly with
# p2p off.
atspi = { version = "0.29.0", default-features = false, features = ["proxies", "wrappers", "tokio"] }
atspi-connection = { version = "0.13.0", default-features = false, features = ["wrappers"] }
base64 = "0.22.1"
evdev = "0.13.2"
cosmic-protocols = { version = "0.2.0", default-features = false, features = ["client"] }
futures-util = "0.3.32"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "process", "rt", "time"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
xkeysym = "0.2.1"
zbus = "5.14.0"
